Does some imports renaming
